added test code

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git://github.com/perspective/perspective-statistics.git"
   },
   "contributors":[
-    "Anders Bøe <> ()"
+    "Anders Bøe <> ()",
     "Marianne Grov <> ()",
     "Hans Magnus Inderberg <hinderberg@gmail.com> (http://hinderberg.no/)",
     "Mads Mobœk <> ()"
